01-basic-echo-routing/K8s/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deploy
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: hashicorp/http-echo:latest
        args:
        - "-text=🟢 Hello from App 1!"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: app1
