01-basic-echo-routing/K8s/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deploy
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: hashicorp/http-echo:latest
        args:
        - "-text=🔵 Hello from App 2!"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: app2
